--- a/EasyLife/iPhone.storyboard
+++ b/EasyLife/iPhone.storyboard
@@ -735,6 +735,24 @@
             </objects>
             <point key="canvasLocation" x="1313" y="523"/>
         </scene>
+        <!--Log In View Controller-->
+        <scene sceneID="qbb-em-B43">
+            <objects>
+                <viewController storyboardIdentifier="LogInViewController" id="Hi2-Nx-XiL" customClass="LogInViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="S3O-Sx-5Fd"/>
+                        <viewControllerLayoutGuide type="bottom" id="kKK-c5-SMe"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="54h-Oz-Hem">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UaN-jf-qAX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1308" y="-1944"/>
+        </scene>
         <!--Navigation Controller - Divider-->
         <scene sceneID="MZT-3X-mYR">
             <objects>
